add better enum support & add union support
